--- a/accounts/Templates/base_account_template.html
+++ b/accounts/Templates/base_account_template.html
@@ -6,14 +6,29 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- This is the Google Fonts Links -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="">
+        <!-- Bootstrap Link -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <style>
-            .red {
-                color: red;
+            body {
+                background-color: white;
+            }
+            .test {
+                text-align: center;
+                font-family: 'Azeret Mono', monospace;
+                color: black;
             }
         </style>
     </head>
     <body>
-        <h1 class="red">Sign In</h1>
+        <h1 class="test mt-5">Gainsville</h1>
+
+        {% block content %}
+        {% endblock %}
+
     </body>
 </html>
